[project]
name = "docling-convert-core"
version = "0.2.2"
description = "Shared Docling document-to-markdown conversion with smart OCR routing"
authors = [
    { name = "Ben" }
]
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling",
    "pymupdf",
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/benlawraus/docling-convert-core"
Repository = "https://github.com/benlawraus/docling-convert-core"

[tool.setuptools]
packages = ["docling_convert_core"]
